test/classes/dinan/circular_init_broken.good
circular_init_broken.chpl:2: error: statement references variable 'b' before it is defined
